# UninstallerDeepForge-Toolset

./: .gitignore  CMakeLists.txt  README.md  UninstallerDeepForge-Toolset.code-workspace
.github/workflows/: UninstallerDeepForgeToolset_CI.yml
src/: DatabaseConnect.cpp  DatabaseConnect.hpp  Uninstaller.cpp  Uninstaller_Linux.hpp  Uninstaller_Windows.hpp  Uninstaller_macOS.hpp  resource.rc
src/Logo/: UninstallerDeepForge_Toolset.psd
src/include/: Uninstaller_Linux.hpp  Uninstaller_Windows.hpp  Uninstaller_macOS.hpp
